<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/guess_the_country"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        />

    <ImageView
        android:id="@+id/countryImageView"
        android:layout_below="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/turkey"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/rulesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/kurallar"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:layout_below="@id/countryImageView"/>

    <EditText
        android:id="@+id/tahminEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/tahmininiz"
        android:layout_below="@+id/rulesTextView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/checkTheGuessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kontrol_et"
        android:backgroundTint="@color/black"
        android:layout_below="@id/tahminEditText"
        android:layout_alignEnd="@+id/tahminEditText"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/checkTheGuessButton"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/skor"
        android:layout_below="@id/title"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/kalanZamanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/kalan_zaman"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        />




</RelativeLayout>